# legallens

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
infra/: redis-master.conf  redis-replica.conf  sentinel-1.conf  sentinel-3.conf
scripts/: download_cuad.py  ingest.py  ingest_worker.py  init_db.sql
src/legallens/: __init__.py  config.py  db.py
src/legallens/agents/: loop.py
src/legallens/api/: main.py
src/legallens/coordination/: sentinel_client.py  worker_registry.py
src/legallens/ingestion/: embedder.py  parser.py  pinecone_writer.py
src/legallens/models/: domain.py
src/legallens/orchestration/: dispatcher.py  heartbeat.py  pub_sub.py
src/legallens/prompts/: tools.py
src/legallens/retrieval/: tools.py
src/legallens/workers/: hash_ring.py  task_queue.py  worker.py
tests/: test_hash_ring.py
