[project]
name = "legallens"
version = "0.1.0"
description = "LLM-powered contract review assistant"
requires-python = ">=3.11"
dependencies = [
    # LLM + agent
    "cohere>=5.0.0",
    "tenacity>=8.2.0",  # retry logic for API calls

    # Retrieval
    "pinecone>=5.0.0",
    "sentence-transformers>=2.5.0",  # local fallback embeddings
    "numpy>=1.26.0",                 # local fallback vector store

    # Distributed coordination
    "redis[hiredis]>=5.0.0",         # async Sentinel + queue client

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",  # better logs than stdlib logging
    "rich>=13.7.0",       # pretty CLI output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "ipython>=8.22.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
